src/components/marketing-site/HowItWorks/index.module.scss
@import '$assets/scss/main.scss';
.howItWorksFeature {
    max-width: 420px;
}

.panel {
    margin: 2rem 0;
    padding: 3rem 1rem;
}

.panelHeader {
    font-size: 50px;
    color: $white;
    font-family: 'Montserrat';
    @media screen and (max-width: 768px) {
        font-size: 30px;
        text-shadow: 1px 1px 1px black;
    }
}

